Archive2/4a/b9822bf9ab1ec1/output
main.cpp:12:68: error: expected ';' at end of declaration
    ublas::compressed_matrix<double, ublas::column_major, 0> Matrix A(5, 5, 12);
                                                                   ^
                                                                   ;
main.cpp:14:5: error: use of undeclared identifier 'A'
    A(0, 0) =  2.; A(0, 1) =  3.;
    ^
main.cpp:14:20: error: use of undeclared identifier 'A'
    A(0, 0) =  2.; A(0, 1) =  3.;
                   ^
main.cpp:15:5: error: use of undeclared identifier 'A'
    A(1, 0) =  3.; A(1, 2) =  4.; A(1, 4) =  6.;
    ^
main.cpp:15:20: error: use of undeclared identifier 'A'
    A(1, 0) =  3.; A(1, 2) =  4.; A(1, 4) =  6.;
                   ^
main.cpp:15:35: error: use of undeclared identifier 'A'
    A(1, 0) =  3.; A(1, 2) =  4.; A(1, 4) =  6.;
                                  ^
main.cpp:16:5: error: use of undeclared identifier 'A'
    A(2, 1) = -1.; A(2, 2) = -3.; A(2, 3) =  2.;
    ^
main.cpp:16:20: error: use of undeclared identifier 'A'
    A(2, 1) = -1.; A(2, 2) = -3.; A(2, 3) =  2.;
                   ^
main.cpp:16:35: error: use of undeclared identifier 'A'
    A(2, 1) = -1.; A(2, 2) = -3.; A(2, 3) =  2.;
                                  ^
main.cpp:17:5: error: use of undeclared identifier 'A'
    A(3, 2) =  1.;
    ^
main.cpp:18:5: error: use of undeclared identifier 'A'
    A(4, 1) =  4.; A(4, 2) =  2.; A(4, 4) =  1.;
    ^
main.cpp:18:20: error: use of undeclared identifier 'A'
    A(4, 1) =  4.; A(4, 2) =  2.; A(4, 4) =  1.;
                   ^
main.cpp:18:35: error: use of undeclared identifier 'A'
    A(4, 1) =  4.; A(4, 2) =  2.; A(4, 4) =  1.;
                                  ^
main.cpp:27:42: error: use of undeclared identifier 'A'
    ublas::permutation_matrix<size_t> pm(A.size1());
                                         ^
main.cpp:28:18: error: use of undeclared identifier 'A'
    lu_factorize(A, pm);
                 ^
main.cpp:29:19: error: use of undeclared identifier 'A'
    lu_substitute(A, pm, y);
                  ^
16 errors generated.
